[package]
name = "toolshed"
version = "0.4.0"
authors = ["maciejhirsz <maciej.hirsz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Arena allocator and a handful of useful data structures"
repository = "https://github.com/ratel-rust/toolshed"
documentation = "https://docs.rs/toolshed/"

[dependencies]
fxhash = "0.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []

impl_serialize = ["serde"]

[profile.bench]
lto = true
