[package]
name = "toolshed"
version = "0.8.1"
authors = ["maciejhirsz <maciej.hirsz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Arena allocator and a handful of useful data structures"
repository = "https://github.com/ratel-rust/toolshed"
documentation = "https://docs.rs/toolshed/"
readme = "README.md"
edition = "2018"

[dependencies]
rustc-hash = "1.0"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []

impl_serialize = ["serde"]

[profile.bench]
lto = true
